--- a/src/App.css
+++ b/src/App.css
@@ -93,8 +93,23 @@ img {
 .card {
   margin-top: 50px;
   background: #eee;
-  padding: 3em;
+  padding: 3rem;
   line-height: 1.5em; }
+
+  .card-fav {
+  margin-top: 50px;
+  background: #eee;
+  padding: 1em;
+  line-height: 1.5em; }
+ 
+  .img-fav {
+    max-height: 200px;
+    max-width: 200px;
+  }
+
+#rowimg {
+text-align: end;
+}
 
 @media screen and (min-width: 997px) {
   .wrapper {
